# ENSG_AR

./: CMakeLists.txt  main.cpp
calib/: calibration  main
code/: CMakeLists.txt  main.cpp
code/OpenCV_Code/: AprilTagReader.cpp  AprilTagReader.h  AprilTagReaderTest.cpp  CMakeLists.txt  README.md
code/OpenCV_Code/calib/: default.xml  out_camera_data.xml
code/opencv_code/: AprilTagReader.cpp  AprilTagReader.h  AprilTagReaderTest.cpp  mainCV  mainCV.cpp  testClass
code/opencv_code/calib/: calibration  camera_calibration.cpp
code/opengl_code/: Camera.h  Mesh.h  Model.h
code/opengl_code/model/suzanne/: suzanne.mtl
code/opengl_code/shaders/: default.fragmentshader  default.vertexshader  light.fragmentshader  light.vertexshader
